GNOME Bugzilla – Bug 684539
Not setting language after start
Last modified: 2012-09-25 14:00:52 UTC
<stefw> but obviously now that you mention it, setting LANG via 'g-k-d --start' would never have worked. Because we don't call setlocale() after setting the LANG, or LC_ALL through --start. This breaks translations of gnome-keyring dialogue in gnome-shell.
Created attachment 224917 [details] [review] daemon: Call setlocale() before completing initialization A new LANG environment variable can be received during late initialization (from gnome-keyring-daemon --start). So call setlocale() so that the new environment variable can take effect.
Attachment 224917 [details] pushed as a807039 - daemon: Call setlocale() before completing initialization