daemon: Call setlocale() before completing initialization

A new LANG environment variable can be received during late
initialization (from gnome-keyring-daemon --start). So call
setlocale() so that the new environment variable can take effect.

https://bugzilla.gnome.org/show_bug.cgi?id=684539